added echarts onClick example

--- a/src/Documentation/config.json
+++ b/src/Documentation/config.json
@@ -229,6 +229,15 @@
             "description": "drag selection enabled on scatter plots",
             "path": "Echarts/Custom/Selection"
         },
+
+        {
+            "category": "Interactive",
+            "subcategory": "onClick",
+            "title": "onClick",
+            "description": "onClick enabled on scatter plots",
+            "path": "Echarts/Custom/onClick"
+        },
+
         {
             "category": "Interactive",
             "subcategory": "Zoom",
